--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,3 @@
 build_script:
-  - git submodule update --init
+  - c:\cygwin64\bin\sh -lc "cd $APPVEYOR_BUILD_FOLDER && git submodule update --init"
   - c:\cygwin64\bin\sh -lc "cd $APPVEYOR_BUILD_FOLDER && make verbose=yes"
